Thu Oct 31 12:30:29 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update.

Mon Oct 21 22:58:50 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Simplify test for uuid_unparse_lower().  (see #626)

Mon Oct 21 22:08:13 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* Makefile.am,configure.ac: Split XAPIAN_LIBS out of XAPIAN_LDFLAGS.
	  (fixes#626)

Mon Oct 21 20:00:35 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/enquire.h,include/xapian/unicode.h: Mark internal
	  methods which are public for implementation convenience as
	  "@private" for doxygen where they weren't already.

Fri Oct 11 10:05:58 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/zlib-vg.c: Fix two warnings when compiled with clang.

Mon Oct 07 07:10:48 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Mon Oct 07 01:07:00 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Enable -fshow-column for GCC - things like vim's
	  quickfix mode will then jump to the appropriate column for a
	  compiler error or warning, not just the appropriate line.

Fri Oct 04 08:58:04 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/brass/brass_check.cc,backends/chert/chert_check.cc,
	  backends/flint/flint_check.cc: Fix xapian-check to report block
	  numbers correctly for links within the B-tree.

Fri Oct 04 06:55:01 GMT 2013  Olly Betts <olly@survex.com>

	* bin/xapian-check-chert.cc,bin/xapian-check-brass.cc,
	  bin/xapian-check-flint.cc: If the METAINFO key is missing, only
	  report it once per table.

Fri Oct 04 06:33:25 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* queryparser/queryparser.lemony: Fix comment typo.

Fri Oct 04 06:30:42 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk: